[package]
name = "contest"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
flate2 = "1.1"
libcgroups = { path = "../../../crates/libcgroups" }
libcontainer = { path = "../../../crates/libcontainer" }
nix = "0.29.0"
num_cpus = "1.16"
oci-spec = { version = "0.7.1", features = ["runtime"] }
once_cell = "1.21.3"
pnet_datalink = "0.35.0"
procfs = "0.17.0"
rand = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
test_framework = { path = "../test_framework" }
uuid = "1.16"
which = "7.0.2"
tempfile = "3"
scopeguard = "1.2.0"
tracing = { version = "0.1.41", features = ["attributes"]}
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }

[dependencies.clap]
version = "4.1.6"
default-features = false
features = ["std", "suggestions", "derive", "cargo", "help", "usage", "error-context"]

